# homie

./: Cargo.toml  README.md  SPEC.md  tweet_thread.md
.claude/skills/homie/: SKILL.md
.github/workflows/: release.yml
src/: config.rs  import.rs  linker.rs  main.rs  manifest.rs  repo.rs  status.rs  strategy.rs  template.rs  vars.rs
src/commands/: add.rs  clone.rs  diff.rs  init.rs  link.rs  list.rs  mod.rs  status.rs  unlink.rs
