[package]
name = "homie"
version = "0.1.0"
edition = "2021"
description = "Dotfiles symlink orchestrator with templates and multiple repo support"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "5"
walkdir = "2"
chrono = "0.4"
colored = "2"
glob = "0.3"
anyhow = "1"
handlebars = "6"
hostname = "0.4"
shellexpand = "3"
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
